--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,14 @@
 .App {
     width: 100vw;
     height: 100vh;
-    background: #f5f5f5;
+    background: #ccc;
 }
 
 .heading {
     font-size: 20px;
     font-weight: bold;
     text-align: center;
+    background-color: #118091;
 }
 
 .flex {
@@ -20,11 +21,13 @@
     width: 500px;
     min-height: 300px;
     padding: 10px;
+    
 }
 
 .task_container {
     margin: 10px 0;
     cursor: pointer;
+ 
 }
 
 .task {
